# World_Tube_Excision

./: .gitignore
multi-element-tensors/: bundles.py  elements.py  em_2d.py  fields.py  frames.py  grids.py  scalar_field.py  state_bundle.py  tensor_elements.py  tests.py
presentation-equations/: notes.tex
scalar-field/: CMakeLists.txt  cheb_test.py  main.cpp  multi-dim-cheb.py  multi-element.py  test.py
writing/: notes.tex
